AP-24 adding configurations for eurika and api-gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # ===============================
 # = SERVER
 # ===============================
-spring.application.name=apollo-analytics
-server.contextPath=/apollo-analytics
+spring.application.name=analytics
+server.contextPath=/analytics
 server.port=8083
 server.error.whitelabel.enabled=false
 
@@ -45,3 +45,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 # = MISCELLANEOUS 
 # ===============================
 spring.devtools.restart.enabled=true
+
+# ===============================
+# = EUREKA CLIENT 
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:5050/eureka/
+eureka.instance.preferIpAddress= true
+eureka.instance.appname=analytics
+eureka.client.register-with-eureka=true
+eureka.client.fetchRegistry= true
