--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 			<version>1.3.5.RELEASE</version>
 		</dependency>
-		
+
+		<!-- Its own jdbc repository -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
 		<!-- Commons -->
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -80,7 +86,7 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
