--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
