--- a/src/main/resources/application-it.properties
+++ b/src/main/resources/application-it.properties
@@ -3,24 +3,26 @@
 # = TESTING DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS analytics
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.schema=classpath:data.sql
+spring.datasource.data=classpath:data/init.sql
 
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/console
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-# Show or not log for each sql query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
