--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 spring.application.name=analytics
 server.contextPath=/analytics
-server.port=8083
+server.port=9083
 server.error.whitelabel.enabled=false
 
 # ===============================
@@ -11,32 +11,17 @@ server.error.whitelabel.enabled=false
 # ===============================
 logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate=WARN
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
-#spring.datasource.username=root
-#spring.datasource.password={L15R@!248}
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password={L15R@!248}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
-#spring.datasource.testWhileIdle=true
-#spring.datasource.validationQuery=SELECT 1
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS analytics
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name:org.h2.Driver
-spring.datasource.platform:h2
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
-
-#datasource.schema=classpath:schema.sql
-#datasource.data=classpath:data.sql
 
 
 # ===============================
@@ -47,7 +32,7 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Naming strategy
