--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,11 @@ logging.level.org.hibernate=WARN
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url = jdbc:mysql://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password={L15R@!248}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-# Keep the connection alive if idle for a long time (needed in production)
-
 
 # ===============================
 # = JPA / HIBERNATE
@@ -32,7 +31,7 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Naming strategy
@@ -40,6 +39,11 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
