AP-24 Creating dev and uat profiles

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,16 @@
+# ===============================
+# = SERVER
+# ===============================
+spring.application.name=analytics
+server.contextPath=/analytics
+server.port=8083
+server.error.whitelabel.enabled=false
 
 # ===============================
 # = TESTING DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS analytics
+spring.datasource.url=jdbc:h2:mem:analytics_dev;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS analytics
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
