--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,31 +3,35 @@
 # ===============================
 spring.application.name=analytics
 server.contextPath=/analytics
-server.port=8083
+server.port=9083
 server.error.whitelabel.enabled=false
 
 # ===============================
-# = TESTING DATA SOURCE
+# = LOGGING
+# ===============================
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=WARN
+
+# ===============================
+# = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:h2:mem:analytics_dev;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS analytics
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.schema=classpath:data.sql
-spring.datasource.data=classpath:data/init.sql
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
+#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url = jdbc:mysql://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password={L15R@!248}
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
+# Show or not log for each sql query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Naming strategy
@@ -35,5 +39,24 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# ===============================
+# = MISCELLANEOUS 
+# ===============================
+spring.devtools.restart.enabled=true
+
+# ===============================
+# = EUREKA CLIENT 
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:5050/eureka/
+eureka.instance.preferIpAddress= true
+eureka.instance.appname=analytics
+eureka.client.register-with-eureka=true
+eureka.client.fetchRegistry= true
