--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<version>2.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
