--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,7 +4,7 @@
 # ===============================
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=INFO
+logging.level.org.hibernate=DEBUG
 
 # ===============================
 # = SERVER
