--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.7.RELEASE</version>
+		<spring.retry.version>1.1.2.RELEASE</spring.retry.version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
