--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,10 +1,11 @@
-
+server.port=9090
+server.error.whitelabel.enabled=false
 # ===============================
 # = LOGGING
 # ===============================
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate=WARN
 
 # ===============================
 # = SERVER
@@ -41,9 +42,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.default_schema=analytics
 
 # Naming strategy
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
