--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -23,8 +23,8 @@ spring.datasource.url=jdbc:h2:mem:analytics_dev;MODE=MySQL;DB_CLOSE_DELAY=-1;INI
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.schema=classpath:data.sql
-spring.datasource.data=classpath:data/init.sql
+#spring.datasource.schema=classpath:sql/schema.sql
+spring.datasource.data=classpath:sql/init.sql
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
