--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,9 +17,10 @@ logging.level.org.hibernate=WARN
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url = jdbc:mysql://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password={L15R@!248}
 
@@ -30,19 +31,20 @@ spring.datasource.password={L15R@!248}
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_schema=apollo
 # Naming strategy
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.RealNamingStrategyImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.databasePlatform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
