--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<version>1.3.5.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+		</dependency>
+
 		<!-- Its own jdbc repository -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -107,13 +112,13 @@
 			<artifactId>hamcrest-library</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Retry Template -->
 		<dependency>
-            <groupId>org.springframework.retry</groupId>
-            <artifactId>spring-retry</artifactId>
-            <version>${spring.retry.version}</version>
-        </dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>${spring.retry.version}</version>
+		</dependency>
 
 	</dependencies>
 
@@ -192,6 +197,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 
 		</plugins>
 	</build>
