--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -38,7 +38,7 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.default_schema=analytics
 
