--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,8 @@ server.error.whitelabel.enabled=false
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.TYPE=trace
 
 # ===============================
 # = SERVER
@@ -38,7 +39,7 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.default_schema=analytics
 
