--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,15 @@
 # ===============================
 # = SERVER
 # ===============================
-spring.application.name=analytics
-server.contextPath=/analytics
-server.port=9083
+spring.application.name=analytics-service
+server.contextPath=/analytics-service/api/v1
+server.port=9090
 server.error.whitelabel.enabled=false
 
 # ===============================
 # = LOGGING
 # ===============================
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=WARN
 
@@ -17,12 +17,11 @@ logging.level.org.hibernate=WARN
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
-#spring.datasource.url=jdbc:mariadb://uat2.libra-apollo.com:3306
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://uat2.libra-apollo.com:3306/apollo?autoReconnect=true
+spring.datasource.url=jdbc:mariadb://192.168.100.36:3306/apollo?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password={L15R@!248}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Keep the connection alive if idle for a long time (needed in production)
 
 # ===============================
 # = JPA / HIBERNATE
@@ -31,20 +30,16 @@ spring.datasource.password={L15R@!248}
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema=apollo
 # Naming strategy
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.RealNamingStrategyImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.databasePlatform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -57,8 +52,8 @@ spring.devtools.restart.enabled=true
 # ===============================
 # = EUREKA CLIENT 
 # ===============================
-eureka.client.service-url.defaultZone=http://localhost:5050/eureka/
-eureka.instance.preferIpAddress= true
-eureka.instance.appname=analytics
-eureka.client.register-with-eureka=true
-eureka.client.fetchRegistry= true
+#eureka.client.service-url.defaultZone=http://localhost:5050/eureka/
+#eureka.instance.preferIpAddress= true
+#eureka.instance.appname=analytics
+#eureka.client.register-with-eureka=true
+#eureka.client.fetchRegistry= true
