--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,8 @@
-server.port=9090
-server.error.whitelabel.enabled=false
+
 # ===============================
 # = LOGGING
 # ===============================
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
 logging.level.org.hibernate.SQL=DEBUG
@@ -12,9 +11,9 @@ logging.level.org.hibernate.TYPE=trace
 # ===============================
 # = SERVER
 # ===============================
-spring.application.name=analytics
-server.contextPath=/analytics
-server.port=8083
+spring.application.name=analytics-service
+server.contextPath=/analytics-service/api/v1
+server.port=8080
 server.error.whitelabel.enabled=false
 
 # ===============================
@@ -26,7 +25,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.schema=classpath:sql/schema.sql
-spring.datasource.data=classpath:sql/init.sql
+#spring.datasource.data=classpath:sql/init.sql
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
