AP-26 Adding Configuration Service with associate repositories and entities

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,8 +5,8 @@
 logging.level.root=INFO
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.TYPE=trace
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.TYPE=trace
 
 # ===============================
 # = SERVER
