AP-26 Adding processing context

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -39,7 +39,11 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=com.libra.apollo.analytics.entity.type.LibraMySQLDialect
 
-
+# ===============================
+# = APPLICATIONS LEVEL PROPERTY
+# ===============================
+analytics.service.numOfThread=20
+analytics.service.batchsize=20
 
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
