--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -50,3 +50,10 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=classpath:sql/load-schema.sql
+
+
+# ===============================
+# = APPLICATIONS LEVEL PROPERTY
+# ===============================
+analytics.service.numOfThread=20
+analytics.service.batchsize=20
