--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring.retry.version>1.1.2.RELEASE</spring.retry.version>
+		<guava.version>23.0</guava.version>
 		<unit-tests.skip>false</unit-tests.skip>
 		<integration-tests.skip>true</integration-tests.skip>
-		<!-- 
-		<hibernate.version>5.2.11.Final</hibernate.version>
-		 -->
+		<!-- <hibernate.version>5.2.11.Final</hibernate.version> -->
 	</properties>
 
 	<profiles>
@@ -56,7 +55,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<exclusions>
-            </exclusions>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -112,6 +111,12 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 
 		<dependency>
