AP-26 Reviewing the processing flow and adding configuration files and integration test

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -42,8 +42,10 @@ spring.jpa.properties.hibernate.dialect=com.libra.apollo.analytics.entity.type.L
 # ===============================
 # = APPLICATIONS LEVEL PROPERTY
 # ===============================
-analytics.service.numOfThread=20
-analytics.service.batchsize=20
+analytics.async.core-pool-size=2
+analytics.async.max-pool-size=50
+analytics.async.queue-capacity=10000
+analytics.async.batch-size=20
 
 # We need to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
