--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 
-analytics.service.numOfThread=20
-analytics.service.batchsize=20
+analytics.async.core-pool-size=2
+analytics.async.max-pool-size=50
+analytics.async.queue-capacity=10000
+analytics.async.batch-size=50
+
