--- a/src/main/resources/application-integration-test.properties
+++ b/src/main/resources/application-integration-test.properties
@@ -55,5 +55,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # ===============================
 # = APPLICATIONS LEVEL PROPERTY
 # ===============================
-analytics.service.numOfThread=20
-analytics.service.batchsize=20
+analytics.async.core-pool-size=2
+analytics.async.max-pool-size=50
+analytics.async.queue-capacity=10000
+analytics.async.batch-size=50
