--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 		<spring.retry.version>1.1.2.RELEASE</spring.retry.version>
 		<guava.version>23.0</guava.version>
+		<swagger-maven-plugin-version>3.1.6</swagger-maven-plugin-version>
 		<unit-tests.skip>false</unit-tests.skip>
 		<integration-tests.skip>true</integration-tests.skip>
 		<!-- <hibernate.version>5.2.11.Final</hibernate.version> -->
@@ -229,8 +230,23 @@
 					</execution>
 				</executions>
 			</plugin>
-
-
+<!--  
+			<plugin>
+				<groupId>com.github.kongchen</groupId>
+				<artifactId>swagger-maven-plugin</artifactId>
+				<version>${swagger-maven-plugin-version}</version>
+				<configuration>
+					<apiSources>
+						<apiSource>
+							<springmvc>true</springmvc>
+							<locations>
+								<location>com.libra.apollo.analytics.api</location>
+							</locations>
+						</apiSource>
+					</apiSources>
+				</configuration>
+			</plugin>
+-->
 		</plugins>
 	</build>
 
