--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
 			<version>2.7.0</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
@@ -230,23 +231,10 @@
 					</execution>
 				</executions>
 			</plugin>
-<!--  
-			<plugin>
-				<groupId>com.github.kongchen</groupId>
-				<artifactId>swagger-maven-plugin</artifactId>
-				<version>${swagger-maven-plugin-version}</version>
-				<configuration>
-					<apiSources>
-						<apiSource>
-							<springmvc>true</springmvc>
-							<locations>
-								<location>com.libra.apollo.analytics.api</location>
-							</locations>
-						</apiSource>
-					</apiSources>
-				</configuration>
-			</plugin>
--->
+			<!-- <plugin> <groupId>com.github.kongchen</groupId> <artifactId>swagger-maven-plugin</artifactId> 
+				<version>${swagger-maven-plugin-version}</version> <configuration> <apiSources> 
+				<apiSource> <springmvc>true</springmvc> <locations> <location>com.libra.apollo.analytics.api</location> 
+				</locations> </apiSource> </apiSources> </configuration> </plugin> -->
 		</plugins>
 	</build>
 
