AP-26 Changes required to integrate with UAT database

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -25,7 +25,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.schema=classpath:sql/schema.sql
-spring.datasource.data=classpath:sql/init.sql
+#spring.datasource.data=classpath:sql/init.sql
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
@@ -38,12 +38,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.default_schema=analytics
+spring.jpa.properties.hibernate.default_schema=analytics
 
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.naming.physical-strategy=com.libra.apollo.analytics.entity.strategy.SchemaAwareNamingStrategyImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect=com.libra.apollo.analytics.entity.type.LibraMySQLDialect
 # We need to enable lazy loading
