--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,33 +10,37 @@ server.error.whitelabel.enabled=false
 # = LOGGING
 # ===============================
 logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=INFO
+logging.level.org.springframework.web=WARNING
+logging.level.org.hibernate=WARNING
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
+# Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.url=jdbc:mariadb://192.168.100.36:3306/apollo?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password={L15R@!248}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-# Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.schema=classpath:sql/schema.sql
+#spring.datasource.data=classpath:sql/init.sql
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-# Show or not log for each sql query
-spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.default_schema=apollo
+
+
 # Naming strategy
-spring.jpa.hibernate.naming.physical-strategy=com.libra.apollo.analytics.entity.strategy.SchemaAwareNamingStrategyImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-#spring.jpa.properties.hibernate.dialect=com.libra.apollo.analytics.entity.type.LibraMySQLDialect
+spring.jpa.properties.hibernate.dialect=com.libra.apollo.analytics.entity.type.LibraMySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Allows Hibernate to generate SQL optimized for a particular DBMS
 
 # ===============================
 # = APPLICATIONS LEVEL PROPERTY
@@ -44,15 +48,13 @@ spring.jpa.hibernate.naming.physical-strategy=com.libra.apollo.analytics.entity.
 analytics.async.core-pool-size=2
 analytics.async.max-pool-size=50
 analytics.async.queue-capacity=10000
-analytics.async.batch-size=20
+analytics.async.batch-size=50
 
-# We need to enable lazy loading
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # ===============================
 # = MISCELLANEOUS 
 # ===============================
-spring.devtools.restart.enabled=true
+#spring.devtools.restart.enabled=true
 
 # ===============================
 # = EUREKA CLIENT 
