AP-26 Revising the schema for UAT database

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,11 +9,14 @@ server.error.whitelabel.enabled=false
 # ===============================
 # = LOGGING
 # ===============================
-logging.level.root=INFO
-logging.level.org.springframework.web=WARNING
-logging.level.org.hibernate=WARNING
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
-# ===============================
+logging.level.com.libra.apollo.analytics.api=DEBUG
+logging.level.com.libra.apollo.analytics.service=DEBUG
+logging.level.com.libra.apollo.analytics.repository=DEBUG
+
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
