--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,6 +17,9 @@ logging.level.com.libra.apollo.analytics.api=DEBUG
 logging.level.com.libra.apollo.analytics.service=DEBUG
 logging.level.com.libra.apollo.analytics.repository=DEBUG
 
+
+spring.profiles.active=dev
+
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
@@ -32,8 +35,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # = JPA / HIBERNATE
 # ===============================
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=verify
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.default_schema=apollo
